--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "nthline": "^1.0.2",
+    "openweather-apis": "^4.4.2",
     "pm2": "^5.2.0"
   }
 }
