--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^2.0.16",
     "nthline": "^1.0.2",
     "openweather-apis": "^4.4.2",
-    "pm2": "^5.2.0"
+    "pm2": "^5.2.0",
+    "request-ip": "^2.2.0"
   }
 }
